--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'com.github.FilthyHound:CT417-Assignment-1-a:v1.0'
+    implementation 'org.terasoluna.gfw:terasoluna-gfw-jodatime-dependencies:5.7.0.RELEASE'
+    implementation 'com.github.FilthyHound:CT417-Assignment-1-a:v1.3'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 test {
