--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version 'v1'
 
 repositories {
     mavenCentral()
@@ -14,7 +14,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.terasoluna.gfw:terasoluna-gfw-jodatime-dependencies:5.7.0.RELEASE'
-    implementation 'com.github.FilthyHound:CT417-Assignment-1-a:v1.3'
+    implementation 'com.github.FilthyHound:CT417-Assignment-1-a:v1.4'
     testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
